--- a/app/src/main/res/layout/fragment_question_creator.xml
+++ b/app/src/main/res/layout/fragment_question_creator.xml
@@ -41,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="@+id/second_wrong_answer_edittext"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/second_wrong_answer_edittext"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/correct_asnwer_edittext" />
 
     <EditText
         android:id="@+id/second_wrong_answer_edittext"
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/first_wrong_answer_edittext" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/correct_asnwer_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
