--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="8dp"
         android:background="#536dfe"
         android:fontFamily="monospace"
-        android:text="Add Question"
+        android:text="@string/add_question"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:background="#536dfe"
         android:fontFamily="monospace"
-        android:text="Take Quiz"
+        android:text="@string/take_quiz"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="#536dfe"
-        android:text="Delete Quiz"
+        android:text="@string/delete_quiz"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         android:textStyle="bold"
