--- a/app/src/main/res/layout/fragment_question_creator.xml
+++ b/app/src/main/res/layout/fragment_question_creator.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimary">
 
     <EditText
-        android:id="@+id/question_edittext"
+        android:id="@+id/create_question_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -76,7 +76,7 @@
         app:layout_constraintBottom_toTopOf="@+id/first_wrong_answer_edittext"
         app:layout_constraintEnd_toEndOf="@+id/first_wrong_answer_edittext"
         app:layout_constraintStart_toStartOf="@+id/first_wrong_answer_edittext"
-        app:layout_constraintTop_toBottomOf="@+id/question_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/create_question_edittext" />
 
     <EditText
         android:id="@+id/third_wrong_answer_edittext"
