--- a/app/src/main/res/layout/fragment_question_creator.xml
+++ b/app/src/main/res/layout/fragment_question_creator.xml
@@ -13,13 +13,17 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:background="@android:color/background_light"
         android:ems="10"
         android:fontFamily="monospace"
         android:hint="@string/enter_question_here"
         android:inputType="textPersonName"
+        android:padding="8dp"
+        android:text="Question"
         android:textAlignment="center"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@android:color/background_light"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
