--- a/app/src/main/res/layout/fragment_take_quiz.xml
+++ b/app/src/main/res/layout/fragment_take_quiz.xml
@@ -12,10 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
+        android:background="@android:color/background_light"
         android:fontFamily="monospace"
         android:text="@string/question"
         android:textAlignment="center"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/first_answer_button"
